--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,13 @@ android {
 
         applicationId "com.chaquo.python.demo3"
 
-        versionName '6.3.0'
+        versionName '7.0.2'
         def verParsed = versionName.split(/\./).collect { Integer.parseInt(it) }
         versionCode ((verParsed[0] * 1000000) + (verParsed[1] * 1000) + (verParsed[2] * 10) + 1)
 
         python {
             // If Chaquopy fails to find Python on your build machine, enable the following
-            // line and edit it to point to Python 3.4 or later.
+            // line and edit it to point to Python 3.5 or later.
             // buildPython "C:/Python36/python.exe"
 
             // Android UI demo
@@ -41,15 +41,12 @@ android {
 
             // Python unit tests
             pip {
-                install "MarkupSafe==1.0"
-                install "murmurhash==0.28.0"
-                install "certifi==2018.01.18"  // For TestAndroidImport
-                install "setuptools==40.4.3"   //
+                install "murmurhash==0.28.0"  // Requires chaquopy-libcxx
             }
             staticProxy("chaquopy.test.static_proxy.basic", "chaquopy.test.static_proxy.header",
                         "chaquopy.test.static_proxy.method")
             pyc {
-                src false
+                src false  // For testing bytecode compilation on device.
             }
         }
         ndk {
