Update .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
-.DS_Store
-
-**/.idea/caches
-**/.idea/libraries
-**/.idea/misc.xml
-**/.idea/workspace.xml
 *.iml
-
-.externalNativeBuild
 .gradle
-build/
-local.properties
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
 
 *.pyc
-hs_err*.log
-
-app/src/main/assets/source
