--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,15 +16,14 @@ afterEvaluate {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 28
-
         applicationId "com.chaquo.python.demo3"
+        minSdkVersion 16
+        targetSdkVersion 29
 
-        versionName '7.0.2'
+        versionName '7.0.3'
         def verParsed = versionName.split(/\./).collect { Integer.parseInt(it) }
         versionCode ((verParsed[0] * 1000000) + (verParsed[1] * 1000) + (verParsed[2] * 10) + 1)
 
@@ -78,10 +77,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "android.arch.lifecycle:extensions:1.1.0"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:preference-v14:28.0.0'
+    // appcompat version 1.2.0 is required to fix an incompatibility with WebView on API level
+    // 21 (https://stackoverflow.com/questions/41025200).
+    implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.preference:preference:1.0.0'
     implementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.12'
 }
