--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
 buildscript {
+    ext.kotlin_version = '1.3.72'
+
     repositories {
         google()
         jcenter()
         maven { url "https://chaquo.com/maven" }
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
 
-        // Newer versions may be available: please check here:
-        // https://chaquo.com/chaquopy/doc/current/changelog.html
-        classpath "com.chaquo.python:gradle:8.0.1"
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.chaquo.python:gradle:9.0.0"
     }
 }
 
