--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,14 +17,14 @@ afterEvaluate {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.chaquo.python.demo3"
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 31
 
-        versionName '9.1.0'
+        versionName '10.0.1'
         def verParsed = versionName.split(/\./).collect { Integer.parseInt(it) }
         versionCode ((verParsed[0] * 1000000) + (verParsed[1] * 1000) + (verParsed[2] * 10) + 1)
 
@@ -87,5 +87,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'junit:junit:4.12'
+    implementation 'org.hamcrest:hamcrest-library:2.2'
+
     testImplementation 'junit:junit:4.12'
 }
